<resources>
    <string name="app_name">TypeChamp</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="nav_drawer_label">Divisions</string>
    <string name="division_tag">Division</string>
    <string name="division_lightweight">Lightweight</string>
    <string name="division_middleweight">Middleweight</string>
    <string name="division_heavyweight">Heavyweight</string>


    <string name="main_page_app_pitch">Type the text shown to you within the allotted time, and track your progress. Can you beat your own record?</string>

    <string name="btn_practice_text">Practice</string>
    <string name="btn_stats_text">Stats</string>

    <string name="default_timer_text">0:00</string>

    <string name="default_challenge_text">Creating challenge&#8230;</string>

    <string name="stats_label">Stats</string>

    <string name="btn_submit_text">Submit</string>

    <string name="avg_time_chart_title">Avg. Type Time per Division (seconds)</string>
    <string name="challenges_chart_title">Total Completed Challenges per Division</string>
    <string name="best_time_chart_title">Best Time per Division (seconds)</string>

</resources>
