<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#d89cf6"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/main_page_app_pitch"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="146dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_keyboard_white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_practice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/oval_button"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_practice_text"
            android:textColor="#d89cf6"/>

        <Button
            android:id="@+id/btn_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/oval_button"
            android:layout_marginStart="10dp"
            android:text="@string/btn_stats_text"
            android:textColor="#d89cf6"/>

    </LinearLayout>

</LinearLayout>