<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stats"
    tools:context=".StatsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="51dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_time_chart_title"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="10dp" />



                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/avg_time_per_division_chart"
                        android:layout_width="match_parent"
                        android:layout_height="400dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/challenges_chart_title"
                    android:textColor="@android:color/black" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/total_challenge_chart"
                    android:layout_width="match_parent"
                    android:layout_height="400dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_time_chart_title"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="10dp" />



                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/best_time_per_division_chart"
                    android:layout_width="match_parent"
                    android:layout_height="400dp" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <include layout="@layout/navigation_view"/>


</androidx.drawerlayout.widget.DrawerLayout>